<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IM</string>
    <string name="again_password">确认密码</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>


    <string name="username_error">用户名不合法,3-6位</string>
    <string name="password_error">密码不合法，8-12位</string>
    <string name="again_password_error">密码不一样</string>

    <string name="login_loading">正在登陆..</string>
    <string name="register_loading">正在注册..</string>
    <string name="login_failed">登陆失败</string>
    <string name="permission_reject">权限被拒绝</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="new_account">新用户</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="username_exist">用户名已存在</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_message">消息</string>
    <string name="title_friends">联系人</string>
    <string name="title_space">动态</string>
    <string name="logout">退出登录</string>
    <string name="logout_error">退出登录失败</string>
    <string name="logout_success">退出登录成功</string>
    <string name="delete_friend_title">删除好友</string>
    <string name="delete_friend_message">是否删除好友?</string>
    <string name="cancel">不删除</string>
    <string name="delete_friend_success">删除好友成功</string>
    <string name="delete_friend_failed">删除好友失败</string>
    <string name="add_friends">添加好友</string>
    <string name="search_friends">搜索好友</string>
    <string name="input_search_friend">输入搜索好友</string>
    <string name="search_success">搜索成功</string>
    <string name="search_failed">搜索失败</string>
    <string name="search_loading">搜索中..</string>
    <string name="already_add">已添加</string>
    <string name="add">添加</string>
    <string name="send">发送</string>

    <string name="chating">与%s聊天</string>
    <string name="send_message_success">发送消息成功</string>
    <string name="send_message_failed">发送消息失败</string>
    <string name="not_txt_message">非文本消息</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint">提示！！</string>
    <string name="logout_message">退出当前用户登录</string>
    <string name="agree_logout">确认退出</string>
    <string name="cancel_logout">取消退出</string>
    <string name="no_text_message">没有消息</string>
    <string name="max_show_message_count">99</string>
    <string name="have_new_message">有新消息</string>
    <string name="delete">删除</string>

</resources>
